fixed view_assessment.html (no styling), added questionresponse model

--- a/PeerConnect/templates/PeerConnect/view_assessment.html
+++ b/PeerConnect/templates/PeerConnect/view_assessment.html
@@ -1,7 +1,12 @@
 {% extends 'base.html' %}
-{% load static %}
-
 {% block content %}
-<p>{{ 'name' }}</p>
-
+<h1>Assessment Page Loaded!</h1>
+{% if assessment %}
+    <h2>Assessment Name: {{ assessment.name }}</h2>
+    {% for question in questions %}
+        <p>Question: {{ question.text }}</p>
+    {% endfor %}
+{% else %}
+    <p>No assessment found.</p>
+{% endif %}
 {% endblock %}
