formset for student submission sorta working!

--- a/PeerConnect/templates/PeerConnect/submit_assessment.html
+++ b/PeerConnect/templates/PeerConnect/submit_assessment.html
@@ -9,6 +9,7 @@
     {% for form in formset %}
         <div class="question-response">
             <label>{{ form.instance.question.text }}</label>
+            {{ form.id }}
             {{ form.answer_text }}  {# For open-ended questions #}
             {{ form.answer_likert }} {# For Likert scale questions #}
         </div>
