--- a/PeerConnect/templates/PeerConnect/student_dashboard.html
+++ b/PeerConnect/templates/PeerConnect/student_dashboard.html
@@ -9,7 +9,16 @@
            <div class="to-do-container">
              <h3 class="section-title">To-Do</h3>
              <div class="to-do">
-               <a href="#">
+              {% for assessment in assessments %}
+              <a href="{% url 'submit_assessment' assessment.id %}">
+                <button class="to-do-btn">
+                  {{assessment.name}}
+                  <p class="due-date">{{assessment.due_date}}</p>
+                </button>
+              </a>
+
+              {% endfor %}
+               <!--<a href="#">
                  <button class="to-do-btn">
                    Chemistry Team Assessment 3
                    <span class="notification-badge">!</span>
@@ -27,7 +36,7 @@
                    SWE Team Assessment 3
                    <p class="due-date">Due: Next Monday, 9:00 AM</p>
                  </button>
-               </a>
+               </a>-->
                
                <div class="to-do-progress">
                  <div class="progress-bar"></div>
@@ -66,32 +75,36 @@
            <!-- Teams Section -->
            <div class="teams-container">
              <h3 class="section-title">My Teams</h3>
+             {% for team in teams%}
              <div class="teams">
                <div class="team-card">
-                 <h4 class="team-name">Beaker Breakers</h4>
-                 <p class="team-course">CHEM1101.02 - Chemistry 101</p>
+                 <h4 class="team-name">{{team.name}}</h4>
+                 <p class="team-course">{{team.course}}</p>
                  <div class="team-members">
-                   <span class="team-member">You</span>
-                   <span class="team-member">Sarah K.</span>
-                   <span class="team-member">Michael P.</span>
-                   <span class="team-member">+4 more</span>
+                  <span class="team-member">You</span>
+                  {% with members=team.members.all %}
+                  {% for member in members %}
+                  {% if member != request.user.userprofile %}
+                   <span class="team-member">{{member.user}}</span>
+                  {% endif %}
+                  {% endfor %}
+                  {% endwith %}
                  </div>
-                 <p class="team-role">Member</p>
+                <!--<p class="team-role">Member</p>-->
                </div>
                
-               <div class="team-card">
-                  <h4 class="team-name">Array of Sunshine</h4>
-                  <p class="team-course">CSCI3356.01 - Software Engineering</p>
-                  <div class="team-members">
-                    <span class="team-member">You</span>
-                    <span class="team-member">Emma S.</span>
-                    <span class="team-member">David W.</span>
-                  </div>
-                  <p class="team-role">Lead Programmer</p>
-                </div>
               </div>
+              {% endfor %}
               
-              
+            </div>
+            <div class="teams-container">
+              <h3 class="section-title">My Courses</h3>
+              {% for course in courses %}
+              <div class="team-card">
+                <h4 class="team-name">{{course.name}}</h4>
+                <p class="team-course">{{course.professor}}</p>
+              </div>
+              {% endfor %}
             </div>
           </div>
         </div>
