--- a/PeerConnect/static/styles/peer_assessment_summary.css
+++ b/PeerConnect/static/styles/peer_assessment_summary.css
@@ -1,233 +1,69 @@
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'Inder', sans-serif;
 }
+
+:root {
+  --primary-color: #315cec;
+  --secondary-color: #49cccc;
+  --accent-color: #d2ebfb;
+  --light-bg: #f9f9f9;
+  --dark-text: #333;
+  --light-text: #fff;
+  --shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  --border-radius: 12px;
+}
+
 body {
-  font-size: 14px;
+  background: #f5f7fa;
+  color: var(--dark-text);
+  font-size: 16px;
+  line-height: 1.6;
+  
 }
-.v1_1686 {
-  width: 100%;
-  height: 2030px;
-  background: rgba(255,255,255,1);
-  opacity: 1;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  overflow: hidden;
+
+.summary-container {
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 30px;
+  background: var(--light-bg);
+  border-radius: var(--border-radius);
+  box-shadow: var(--shadow);
 }
-.v1_1695 {
-  width: 100%;
-  color: rgba(0,0,0,1);
-  position: absolute;
-  top: 494px;
-  left: 295px;
-  font-family: Inder;
-  font-weight: Regular;
-  font-size: 128px;
-  opacity: 1;
+
+.greeting {
+  font-size: 28px;
+  font-weight: bold;
+  margin-bottom: 30px;
+  color: var(--primary-color);
   text-align: center;
 }
-.v1_1696 {
-  width: 100%;
-  color: rgba(0,0,0,1);
-  position: absolute;
-  top: 891px;
-  left: 2211px;
-  font-family: Inder;
-  font-weight: Regular;
-  font-size: 128px;
-  opacity: 1;
-  text-align: center;
+
+.question-container {
+  background: white;
+  border-radius: var(--border-radius);
+  padding: 20px 25px;
+  margin-bottom: 25px;
+  box-shadow: var(--shadow);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
-.v1_1697 {
-  width: 100%;
-  color: rgba(0,0,0,1);
-  position: absolute;
-  top: 1002px;
-  left: 78px;
-  font-family: Inder;
-  font-weight: Regular;
-  font-size: 64px;
-  opacity: 1;
-  text-align: center;
+
+.question-container:hover {
+  transform: translateY(-4px);
+  box-shadow: 0 6px 16px rgba(0, 0, 0, 0.15);
 }
-.v1_1698 {
-  width: 100%;
-  color: rgba(0,0,0,1);
-  position: absolute;
-  top: 1281px;
-  left: 78px;
-  font-family: Inder;
-  font-weight: Regular;
-  font-size: 64px;
-  opacity: 1;
-  text-align: center;
+
+.section-title {
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 10px;
+  color: var(--dark-text);
 }
-.v1_1700 {
-  width: 100%;
-  color: rgba(0,0,0,1);
-  position: absolute;
-  top: 1560px;
-  left: 280px;
-  font-family: Inder;
-  font-weight: Regular;
-  font-size: 64px;
-  opacity: 1;
-  text-align: center;
-}
-.name {
-  color: #fff;
-}
-.name {
-  color: #fff;
-}
-.name {
-  color: #fff;
-}
-.name {
-  color: #fff;
-}
-.name {
-  color: #fff;
-}
-.name {
-  color: #fff;
-}
-.name {
-  color: #fff;
-}
-.name {
-  color: #fff;
-}
-.name {
-  color: #fff;
-}
-.name {
-  color: #fff;
-}
-.name {
-  color: #fff;
-}
-.name {
-  color: #fff;
-}
-.name {
-  color: #fff;
-}
-.name {
-  color: #fff;
-}
-.name {
-  color: #fff;
-}
-.v1_1811 {
-  width: 100%;
-  color: rgba(0,0,0,1);
-  position: absolute;
-  top: 1066px;
-  left: 2218px;
-  font-family: Inder;
-  font-weight: Regular;
-  font-size: 96px;
-  opacity: 1;
-  text-align: left;
-}
-.name {
-  color: #fff;
-}
-.name {
-  color: #fff;
-}
-.name {
-  color: #fff;
-}
-.name {
-  color: #fff;
-}
-.name {
-  color: #fff;
-}
-.v70_12332 {
-  width: 100%;
-  height: 100%;
-  background: url("../images/v70_12332.png");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  opacity: 1;
-  position: absolute;
-  top: 957px;
-  left: 598px;
-  overflow: hidden;
-}
-.v116_1161 {
-  width: 100%;
-  height: 257px;
-  background: rgba(49,92,236,1);
-  opacity: 1;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  overflow: hidden;
-}
-.v116_1162 {
-  width: 186px;
-  height: 176px;
-  background: rgba(217,217,217,1);
-  opacity: 1;
-  position: absolute;
-  top: 32px;
-  left: 3753px;
-  border-radius: 50%;
-}
-.name {
-  color: #fff;
-}
-.v116_1164 {
-  width: 840px;
-  color: rgba(255,255,255,1);
-  position: absolute;
-  top: 38px;
-  left: 185px;
-  font-family: Inder;
-  font-weight: Regular;
-  font-size: 128px;
-  opacity: 1;
-  text-align: center;
-}
-.v116_1165 {
-  width: 600px;
-  color: rgba(255,255,255,1);
-  position: absolute;
-  top: 37px;
-  left: 2556px;
-  font-family: Inder;
-  font-weight: Regular;
-  font-size: 128px;
-  opacity: 1;
-  text-align: center;
-}
-.v116_1166 {
-  width: 512px;
-  color: rgba(255,255,255,1);
-  position: absolute;
-  top: 47px;
-  left: 3156px;
-  font-family: Inder;
-  font-weight: Regular;
-  font-size: 110px;
-  opacity: 1;
-  text-align: center;
-}
-.v116_1167 {
-  width: 171px;
-  height: 171px;
-  background: url("../images/v116_1167.png");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  opacity: 1;
-  position: absolute;
-  top: 47px;
-  left: 55px;
-  overflow: hidden;
+
+.results-title {
+  font-size: 16px;
+  color: #555;
+  padding-left: 10px;
 }
