fixed results btn hover color
matched button color

--- a/PeerConnect/static/styles/student_dashboard.css
+++ b/PeerConnect/static/styles/student_dashboard.css
@@ -161,7 +161,7 @@ body {
 }
 
 .results-btn:hover {
-  background-color: #03afaf;
+  background-color: #b05d46;
 }
 
 /* Teams Section - New Addition */
