courses header on professor dashboard
added courses header

--- a/PeerConnect/templates/PeerConnect/professor_dashboard.html
+++ b/PeerConnect/templates/PeerConnect/professor_dashboard.html
@@ -9,6 +9,7 @@
         </aside>
 
         <div class="items">
+            <h4>Courses</h4>
             <div class="course-container">
                 {% for course in courses %}
                     <a href="{% url 'create' %}">
