--- a/PeerConnect/static/styles/professor_dashboard.css
+++ b/PeerConnect/static/styles/professor_dashboard.css
@@ -16,7 +16,7 @@
     margin: 0 10px;
     padding: 70px 20px 20px;
     display: flex;
-    height: 100vh;
+    height: fit-content;
     background-color: #fff;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   }
