--- a/PeerConnect/static/styles/course_form.css
+++ b/PeerConnect/static/styles/course_form.css
@@ -8,6 +8,9 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    max-height: 90vh;           
+    overflow-y: auto;          
 }
 
 /* Heading inside modal */
@@ -56,6 +59,15 @@
     width: 100%;
     box-sizing: border-box;
     overflow-y: auto; /* Enable scrolling if many options */
+}
+
+.course-form-wrapper .small-select {
+    height: 40px;
+    padding: 8px;
+    font-size: 14px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    width: 100%;
 }
 
 .course-form-wrapper .selected-students {
