--- a/PeerConnect/templates/PeerConnect/course_form.html
+++ b/PeerConnect/templates/PeerConnect/course_form.html
@@ -21,6 +21,16 @@
             <label for="name">Course</label>
             <input type="text" id="name" name="name" required>
             
+            <label for="semester">Semester</label>
+            <select id="semester" name="semester" class="small-select" required>
+                {% for value, label in SemesterType.choices %}
+                    <option value="{{ value }}">{{ label }}</option>
+                {% endfor %}
+            </select>
+
+            <label for="year">Year</label>
+            <input type="number" id="year" name="year" min="2000" max="2100" required>
+
             <label for="students">Students</label>
             <!--<input type="text" id="students" name="students" list="students-list" placeholder="Start typing to search..." required multiple>
 
