--- a/PeerConnect/static/styles/submit_assessment.css
+++ b/PeerConnect/static/styles/submit_assessment.css
@@ -9,6 +9,12 @@
     text-align: center;
     font-size: 2rem;
     color: var(--dark-text);
+    margin-bottom: 20px;
+}
+.assessment-subtitle {
+    text-align: center;
+    font-size: 1rem;
+    color: var(--dark-text);
     margin-bottom: 30px;
 }
 
